# axum-hurl-test

./: Cargo.toml  Makefile  README.md  hello.hurl
src/: lib.rs
tests/: api.hurl  api.rs
tests/api/: basic.hurl
