[package]
name = "axum-hurl-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
axum-test = "14.9.0"
hurl = "4.3.0"
tokio = { version = "1.37.0", features = ["full"] }
